app/static/styles/main.scss
/* ... */
/*--------------*/
/* AUTH PROCESS */
/*--------------*/
#container.login-auth {
  input[type=password], input[type=text] {
    height: 44px;
    width: 100%;
  }

  p {
    text-align: center;
    margin: 0;
    padding-bottom: 25px;
  }

  form {
    padding-top: 42px;
  }

  label[for=remember_me] {
    font-weight: 400;
    font-size: 14px;
    padding-left: 20px;
    display: block;
  }

  @include tablet {
    grid-template-areas: "sidebar" "content";
    grid-template-columns: 100vw;
    grid-template-rows: 100vh;
    grid-auto-flow: column;

    #sidebar {
      padding: 20px 60px;

      h1 {
        margin-top: 0;
      }
    }

    #content {
      display: none;
    }
  }

  &include phone {
    grid-template-areas: "sidebar" "content";
    grid-template-columns: 100vw;
    grid-template-rows: 100vh;
    grid-auto-flow: column;

    #sidebar {
      h1 {
        margin-top: 0;
      }

      padding: 20px 30px;
    }
  }
}

/*--------------*/
/* REGISTRATION */
/*--------------*/
#container.register {
  .form-container {
    overflow: hidden;
    margin: 20px;
    background: #fff;
    border-radius: 4px;
    padding: 20px 40px;

    p {
      margin: 0;
      padding-bottom: 25px;
    }

    #player_team {
      display: grid;
      grid-template-columns: repeat(4, minmax(145px, 1fr));
      grid-auto-flow: row;
      grid-column-gap: 20px;
      padding: 0;

      @include tablet {
        grid-template-columns: 1fr;
      }

      @include phone {
        grid-template-columns: 1fr;
      }

      li {
        list-style-type: none;
        padding: 0;
        margin: 0;
        position: relative;

        label {
          display: inline-block;
          padding: 10px 10px 10px 68px;
          border: solid 1px #E1E3DF;
          border-radius: 4px;
          height: 68px;
          line-height: 48px;
          background-repeat: no-repeat;
          opacity: 0.8;

          &:hover {
            border-color: #adaeaa;
          }

          &[for=player_team-0] {
            background-image: url('../img/TeamMystic.svg');
            background-position: -5px -25px;
            background-size: 75px;
          }

          &[for=player_team-1] {
            background-image: url('../img/TeamInstinct.svg');
            background-position: -5px -25px;
            background-size: 80px;
          }

          &[for=player_team-2] {
            background-image: url('../img/TeamValor.svg');
            background-position: -8px -24px;
            background-size: 80px;
          }

          &[for=player_team-3] {
            background-image: url('../img/TeamHarmony.svg');
            background-position: 10px 2px;
            background-size: 45px;
          }
        }

        input[type=radio] {
          opacity: 0;
          height: 1px;
          width: 1px;
          position: absolute;

          &:checked + label {
            border-color: #a3c293;
            background-color: #fcfff5;
            color: #2c662d;
            opacity: 1;
          }
        }
      }
    }
  }

  @include tablet {
    grid-template-areas: "content" "sidebar";
    grid-template-columns: 100vw;
    grid-template-rows: 100vh;
    grid-auto-flow: column;

    #sidebar {
      display: none;
    }
  }

  @include phone {
    grid-template-areas: "content" "sidebar";
    grid-template-columns: 100vw;
    grid-template-rows: 100vh;
    grid-auto-flow: column;

    #sidebar {
      display: none;
    }
  }
}
/* ... */

